# bevy_simple_water

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs  presets.rs  realtime_settings.rs
src/: components.rs  lib.rs  material.rs  systems.rs
src/shader/: water_material.wgsl
